<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_register">Not Register?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Allready_register">Allready Register</string>
    <string name="login_here">Login here</string>
</resources>
