<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:src="@drawable/logo"
        android:layout_marginTop="150dp"
        >
    </ImageView>
   <EditText
       android:id="@+id/edittext_username"
       android:layout_width="190dp"
       android:layout_height="40dp"
       android:layout_marginTop="10dp"
       android:paddingLeft="2dp"
       android:drawableLeft="@drawable/username"
       android:hint="@string/username"
       android:background="#ffffff"
       >
   </EditText>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:background="#ffffff"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password">
    </EditText>
    <Button
        android:id="@+id/button_Login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#07D50F"
        android:layout_marginTop="20dp"
        android:text="@string/login">
    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_register"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:layout_marginTop="12dp"
            >
        </TextView>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:layout_marginTop="12dp"
            >
        </TextView>
    </LinearLayout>
</LinearLayout>